Hemos hecho que el grid de el index sea responsive en cuanto al texto, ahora nos faltan las imágenes pero coge forma

--- a/styles/style.css
+++ b/styles/style.css
@@ -192,7 +192,7 @@ justify-content: center;
         
 
         /* vamos a poner el primer grid */
-        #contenedor_grid{
+        /* #contenedor_grid{
             background-color: yellow;
             margin-top: 50px;
 
@@ -242,4 +242,4 @@ justify-content: center;
             display: flex;
             justify-content: center;
             align-items: center;
-        }
+        } */
