--- a/styles/grid.css
+++ b/styles/grid.css
@@ -23,12 +23,16 @@
     grid-template-columns:  50% auto ;
     margin: 0 auto;
 }
-/* ahora viene algo tedioso, intentaremos re adaptar el grid a resoluciones menores: */
-@media (min-width: 0px) {
-    .foto_grid{
-        display: none;
+
+@media (max-width: 768px) {
+    .grid{
+        display:flex;
+        flex-direction: column;
     }
 }
+
+/* ahora viene algo tedioso, intentaremos re adaptar el grid a resoluciones menores: */
+
 .div_icono_grid{
     float: left;
     background-color: white;
@@ -52,11 +56,40 @@
     
 }
 
+
+
 .texto_grid{
     background-color: white;
 }
+@media (max-width: 700px) {
+    .div_icono_grid{
+        height: 0%;
+        width: 0%;
+    }
+    .texto_grid{
+        width: 100%;
+        height: 100%;
+        background-color: orange;
+        
+    }
+    .titulo_grid{
+        float: left;
+        height: 25%;
+        width: 100%;
+        background-color: green;
+        color: yellow;
+    }
+    .cuerpo_grid{
+        background-color: royalblue;
+        width: 100%;
+        height: 100%;
+        
+    }
 
-.titulo_grid{
+}
+
+@media (min-width: 700px) {
+    .titulo_grid{
     background-color: blue;
     float: left;
     height: 40%;
@@ -65,8 +98,6 @@
     justify-content: center;
     align-items: center;
 }
-
-
 .cuerpo_grid{
     float: left;
     height: 143px;
@@ -79,3 +110,29 @@
     padding: 0;
     
 }
+
+}
+
+/* .titulo_grid{
+    background-color: blue;
+    float: left;
+    height: 40%;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+
+/* .cuerpo_grid{
+    float: left;
+    height: 143px;
+    width: 50%;
+    background-color: blueviolet;
+    text-align: left;
+}
+.cuerpo_grid p{
+    margin: 4px 8px;
+    padding: 0;
+    
+} */
