--- a/styles/grid.css
+++ b/styles/grid.css
@@ -5,7 +5,7 @@
 
 .box{
     border: 4px solid black;
-    background-color: lightgray;
+    background-color: var(--primario);
     text-align:center;
     height: 190px;
 
@@ -15,7 +15,6 @@
     .grid{
         height: 100%;
         width:80%;
-        background-color: lightgreen;
         display: grid;
         justify-content: stretch;
         grid-template-rows: auto auto auto auto auto  ;
@@ -78,14 +77,15 @@
         float: left;
         height: 25%;
         width: 100%;
-        background-color: green;
-        color: yellow;
+        background-color: #00304E;
+        color: white;
     }
     .cuerpo_grid{
-        background-color: royalblue;
+        background-color: var(--secundario);
         width: 100%;
         height: 100%;
         font-size: 100%;
+        color: white;
     }
 
 }
