--- a/styles/idiomas.css
+++ b/styles/idiomas.css
@@ -129,21 +129,43 @@ html { scroll-behavior: smooth; }
 	height: 524px;
 	width: 750px;
 }
-@media (max-width: 768px) {
+@media (max-width: 700px) {
 	.slide img {
 		width: 100%px;
 		vertical-align: to;
-		height: 124px;
-		width: 350px;
+		height: 200px;
+		width: 250px;
+	}
+
+	.slider{
+		width: 100%;
+		height: 123px;
+		
 	}
 
 	.slide{
-		width: 600px;
-		height: 123px;
+		width: 100%;
+		height: 100%;
+		list-style: none;
 	}
 
-	.caption p{
-		font-size: 1vw;
+	.caption {
+		font-size: 20px;
+	}
+	.wrapper{
+		height: 200px;
+	}
+
+	.caption {
+		color: white;
+		text-shadow: 1px 1px black;
+		font-size: 13vw;
+		position: absolute;
+		bottom: 8vw;
+		right: 4vw;
+		opacity: 50%;
+		background-color: black;
+		
 	}
 
 }
@@ -154,15 +176,29 @@ html { scroll-behavior: smooth; }
 		vertical-align: to;
 		height: 224px;
 		width: 450px;
+		
 	}
 
 	.slide{
 		width: 800px;
 		height: 223px;
+		list-style: none;
 	}
 
 	.caption p{
 		font-size: 1vw;
+	}
+
+	.caption {
+		color: white;
+		text-shadow: 1px 1px black;
+		font-size: 8vw;
+		position: absolute;
+		bottom: 8vw;
+		right: 4vw;
+		opacity: 50%;
+		background-color: black;
+		
 	}
 
 }
@@ -193,7 +229,7 @@ html { scroll-behavior: smooth; }
 	position: relative;
 }
 
-.caption {
+.capton {
 	color: white;
 	text-shadow: 1px 1px black;
 	font-size: 8vw;
