Co-authored-by: JUAN MARTIN BARRACHINA ALFONSO <jubaal@floridauniversitaria.es>

--- a/styles/style.css
+++ b/styles/style.css
@@ -183,7 +183,9 @@ justify-content: center;
         
         }
     
-    
+    body{
+        height: 100%;
+    }
     
         .parte_abajo a:hover{
             
