--- a/styles/grid.css
+++ b/styles/grid.css
@@ -79,6 +79,10 @@
         width: 100%;
         background-color: #00304E;
         color: white;
+        font-size: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .cuerpo_grid{
         background-color: var(--secundario);
