--- a/styles/grid.css
+++ b/styles/grid.css
@@ -56,6 +56,13 @@
     
 }
 
+#educational , #international {
+    width: 50%;
+}
+
+#about{
+    width: 60%;
+}
 
 
 .texto_grid{
@@ -90,6 +97,7 @@
         height: 100%;
         font-size: 100%;
         color: white;
+        
     }
 
 }
@@ -104,6 +112,7 @@
     justify-content: center;
     align-items: center;
     color: white;
+    font-size: 1.3rem;
 }
 .cuerpo_grid{
     float: left;
