--- a/styles/grid.css
+++ b/styles/grid.css
@@ -21,6 +21,9 @@
         grid-template-columns:  50% auto ;
         margin: 0 auto;
     }
+    .texto_grid{
+    background-color: var(--secundario);
+}
 }
 
 
@@ -64,6 +67,9 @@
     width: 60%;
 }
 
+.texto_grid{
+    background-color: var(--secundario);
+}
 
 .texto_grid{
     background-color: white;
@@ -77,7 +83,6 @@
     .texto_grid{
         width: 100%;
         height: 100%;
-        background-color: orange;
         
     }
     .titulo_grid{
@@ -99,7 +104,9 @@
         color: white;
         
     }
-
+    .texto_grid{
+        background-color: var(--secundario);
+    }
 }
 
 @media (min-width: 700px) {
@@ -116,7 +123,7 @@
 }
 .cuerpo_grid{
     float: left;
-    height: 143px;
+    height: 100%;
     width: 50%;
     background-color: var(--secundario);
     text-align: left;
@@ -126,6 +133,10 @@
     margin: 4px 8px;
     padding: 0;
     
+}
+
+.texto_grid{
+    background-color: var(--secundario);
 }
 
 }
