--- a/styles/grid.css
+++ b/styles/grid.css
@@ -1,15 +1,20 @@
+
+.espacio_grid{
+    background-color: var(--primario);
+    height: 20px;
+    width: 100%;
+}
+
 #contenedor_grid{
     background-color: var(--primario);
-
+    
 }
 
 .box{
     border: 4px solid black;
-    background-color: var(--primario);
+    background-color: var(--secundario);
     text-align:center;
     height: 190px;
-
-
 }
 @media (min-width: 768px) {
     .grid{
