--- a/styles/style.css
+++ b/styles/style.css
@@ -199,18 +199,77 @@ footer{
     height: 300px;
     width: 100%;
 }
+
+@media (max-width: 768px) {
+    footer{
+    background-color: var(--azul);
+    height: 150px;
+    width: 100%;
+}
+
+}
+
 .container_footer{
     background-color: green;
     height: 100%;
     width: 80%;
     margin: auto;
 }
+
 .izq_footer{
     height: 100%;
     width: 33%;
-    background-color: yellow;
+    background-color: var(--azul);
     float: left;
 }
+.logo_footer{
+    float: left;
+    height: 100px;
+    width: 100%;
+    
+    display: flex;
+    justify-content: center;
+}
+@media (max-width: 720px) {
+    .logo_footer img{
+    height: 20px;
+}
+}
+.redes_sociales_footer{
+    height: 30%;
+    width: 100%;
+    background-color: aqua;
+    float: left;
+    margin-top: 5px;
+    
+}
+
+.redes_sociales_footer img{
+    width: 70%;
+    height: 70%;
+    
+    
+}
+
+.icons_footer {
+    background-color: black;
+    float: left;
+    height: 10%;
+    width: 10%;
+    margin-left: 1rem;
+}
+.alineado_iconos{
+    display: flex;
+    align-items: center;
+    background-color: yellow;
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    float: left;
+}
+
+
 
 .centro_footer{
     height: 100%;
@@ -225,3 +284,4 @@ footer{
     background-color: red;
     float: left;
 }
+
