--- a/styles/style.css
+++ b/styles/style.css
@@ -152,7 +152,7 @@ justify-content: center;
         .parte_abajo {
             background-color: var(--primario);
             height: 23rem;
-            width: 101%;
+            width: 100%;
             float: left;
             margin: 0 0 ;
             
@@ -230,11 +230,11 @@ footer{
     .container_footer{
         display: flex;
         flex-direction: column;
-        height: 100%;
+        height: 65rem;
         width: 100%;
     }
     .izq_footer{
-        height: 40rem;
+        height: 490px;
         width: 100%;
         background-color: var(--azul);
         float: left;
@@ -252,7 +252,7 @@ footer{
 
 .logo_footer{
     float: left;
-    height: 100px;
+    height: 10rem;
     width: 100%;
     
     display: flex;
@@ -318,35 +318,57 @@ footer{
     .centro_footer{
         height: 100%;
         width: 34%;
-        background-color: orange;
+        background-color: var(--azul);
         float: left;
     }
 }
 
 @media (max-width: 768px) {
     .centro_footer{
-        height: 40rem;
+        height: 20rem;
         width: 100%;
-        background-color: red;
+        background-color: var(--azul);
         float: left;
     }
 }
 
-.centro_vacio{
-    background-color: purple;
+.centro_container{
+
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.centro_direccion , .centro_contacto{
+
+    width: 100%;
+    text-align: center;
+    
 }
 
 
+.espacio_contacto{
+    margin-top: 2rem;
+    }
 
+    .espacio_contacto a , p{
+        text-decoration: none;
+        color: white;
+        }
+
+
+
+/* a partir de aquí vamos a diseñar la parte derecha del footer */
 
 
 @media (min-width: 768px) {
     .der_footer{
         height: 100%;
         width: 33%;
-        background-color: red;
+        background-color: var(--azul);
         float: left;
     }
 }
@@ -355,13 +377,24 @@ footer{
     .der_footer{
         height: 40rem;
         width: 100%;
-        background-color: red;
+        background-color: var(--azul);
         float: left;
     }
 }
 
 .der_vacio{
-    background-color: yellow;
     height: 100%;
     width: 100%;
+}
+
+.uv{
+
+    height: 25%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.uv img{
+    height: 100%;
 }
