--- a/en/style_no_main.css
+++ b/en/style_no_main.css
@@ -1,63 +1,41 @@
- /* Dropdown Button, este botón ha sido gracias a w3 school: https://www.w3schools.com/howto/howto_js_dropdown.asp */
- .dropbtn_subjects {
-	cursor: pointer;
-	background-color: var(--secundario);
-  	color: white;
-  	padding: 16px;
-  	font-size: 18px;
-  	border: none;
-  	height: 60px;
-  	width: 300px;
-  	font-family: florida-font;
+.botones_subjects button{
+	width: 100%;
+	height: 9rem;
+	font-family: florida-font;
+	background-color: white;
+	color: var(--primario);
+	border: 0px;
+	border-radius: 4rem;
 }
 
-
-
-  	@media (max-width: 768px) {
-	.dropbtn_subjects{
-		margin-top: 25px;
+@media (max-width: 768px) {
+	.botones_subjects button{
+		width: 100%;
+		height: 9rem;
+		font-family: florida-font;
+		background-color: white;
+		color: var(--primario);
+		border: 0px;
+		border-radius: 4rem;
 	}
-} 
-/* este mq sirve para alinear el botón en modo smartphone */ */
+	.botones_subjects{
 
-
-  /* Dropdown button on hover & focus */
-.dropbtn_subjects:hover, .dropbtn_subjects:focus {
-	background-color: var(--primario);
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
 }
 
-  /* The container <div> - needed to position the dropdown content */
-.dropdown_subjects {
-	position: relative;
-	display: inline-block;
+.botones_subjects button:hover{
+	background-color: #E22636;
+	transition: 1s;
+	color: white;
 }
 
-  /* Dropdown Content (Hidden by Default) */
-.dropdown-content_subjects {
-	display: none;
-	position: absolute;
-	background-color: #f1f1f1;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
+.botones_subjects{
 
-  /* Links inside the dropdown */
-.dropdown-content_subjects a {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-}
-
-  /* Change color of dropdown links on hover */
-.dropdown-content_subjects a:hover {background-color: #ddd;}
-
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show_subjects {display:block;} 
-
-#tick{
-    height: 40px;
-    float: left;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
