--- a/en/style_no_main.css
+++ b/en/style_no_main.css
@@ -5,7 +5,7 @@
 	background-color: white;
 	color: var(--primario);
 	border: 0px;
-	border-radius: 4rem;
+	/* border-radius: 4rem; pendiente de decision */
 }
 
 @media (max-width: 768px) {
@@ -38,4 +38,39 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+body{
+	background-color: var(--azul);
+}
+
+.title_subjects{
+	text-align: center;
+	color: var(--blanco);
+}
+
+
+#contenedor_subjects{
+	background-color: yellow;
+}
+
+@media (min-width: 768px) {
+	#fondo_azul_por_footer{
+		height:70rem;
+		width:100%;
+		color: var(--blanco);
+		margin-top: 30rem;
+	}
+}
+
+@media (max-width: 768px) {
+	#fondo_azul_por_footer{
+		height:30rem;
+		width:100%;
+		color: var(--blanco);
+		margin-top: 10rem;
+	}
+}
+
+#fondo_azul_por_footer{
+	text-align: center;
 }
