mejorandolo casi-todo, a falta de about us y de facilities todo lo demás funcionando correctamente.

--- a/styles/grid.css
+++ b/styles/grid.css
@@ -149,6 +149,9 @@
 
 /* grid para facilities */
 
+
+@media (min-width: 768px) {
+    
 .grid_galeria{
     display: grid;
     grid-template-columns: 25% 25% 25% 25%; 
@@ -162,14 +165,29 @@
     height: 350px;
     background-color: beige;
     opacity: 0%;
+    
+}
+.facility h1{
+    color: var(--blanco);
+
+}
+.facility p{
+
+
 }
 .titulo_grid_fac{
-    background-color: red;
-    height: 15%;
+    background-color: var(--primario);
+    height: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
     
+}
+
+.cuerpo_grid_fac {
+    margin-top: 40px;
+    text-align: center;
+
 }
 
 .facility:hover{
@@ -192,4 +210,76 @@
         background-size: 350px 350px;
 }
 
+.parquesito{
+    background-image: url(../img/fotos_lugares/parquesito.jpg);
+        background-size: 350px 350px;
+}
 
+.espaciete{
+    display: none;
+}
+}
+
+@media (max-width: 768px) {
+    .grid_galeria{
+        display: flex;
+        flex-direction: column;
+        margin-top: 30px;
+    }
+    .facility{
+        height: 35rem;
+        background-color: beige;
+        opacity: 0%;
+    }
+    .facility h1{
+        color: var(--blanco);
+    
+    }
+    .facility p{
+    
+    
+    }
+    .titulo_grid_fac{
+        background-color: var(--primario);
+        height: 25%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    
+    .cuerpo_grid_fac {
+        margin-top: 40px;
+        text-align: center;
+    
+    }
+    
+    .facility:hover{
+        opacity: 100%;
+        transition: 1s;
+    }
+    
+    .cafeteria{
+            background-image: url(../img/fotos_lugares/COMEDOR-FLORIDA-UNIVERSITARIA.jpg);
+            background-size: 350px 350px;
+    }
+    
+    .biblioteca{
+            background-image: url(../img/fotos_lugares/biblio_flo.jpg);
+            background-size: 350px 350px;
+    }
+    
+    .pabellon{
+        background-image: url(../img/fotos_lugares/pabellon.jpg);
+            background-size: 350px 350px;
+    }
+    
+    .parquesito{
+        background-image: url(../img/fotos_lugares/parquesito.jpg);
+            background-size: 350px 350px;
+    }
+    .espaciete{
+        display: flex;
+        height: 3.0rem;
+    }
+}
